resolving QA pointers

--- a/public/frontend/BrandSparkz/error.html
+++ b/public/frontend/BrandSparkz/error.html
@@ -316,7 +316,7 @@
         <div class="error_div1">
             <div class="inner_error">
                 <div class="text_error">
-                    <h3 class="heading_error">oops, we lost you somewhere!</h3>
+                    <h3 class="heading_error mobile_none">oops, we lost you somewhere!</h3>
                     <p class="para_error">Let us help you find your way back.</p>
                 </div>
                 <button class="btn btn_error">Take Me Home</button>
